# socket-cli

./: .dep-stats.json  .dockerignore  .env.dist  .env.example  .env.local  .env.local.example  .env.precommit  .env.test  .env.testu  .gitattributes  .gitignore  .ncurc.json  .npmrc  .oxfmtrc.json  .oxlintignore  .oxlintrc.json  .pnpmrc  ARCHITECTURE.md  BORDERED-INPUT-DEMO.md  CHANGELOG.md  CLAUDE.md  DOCUMENTATION-AUDIT.md  FINAL-INPUT-DEMO.md  HORIZONTAL-INPUT-DEMO.md  INFRASTRUCTURE_IMPROVEMENTS.md  LOGIC_BUGS_REVIEW.md  MONOREPO.md  Makefile  PLAN.md  README.md  SESSION_SUMMARY.md  TEST_DUPLICATION_ANALYSIS.md  TEXT-EFFECTS-DEMO.md  THEME-DEMO.md  TODO.md  activate-build-env.sh  biome.json  depot.json  eslint.config.js  eslint.config.mjs  (+25 more)
.claude/: settings.json  test-examples.md
.config/: README.md  babel.config.js  biome.json  build-config.json5  esbuild-inject-import-meta.js  esbuild.cli.build.mjs  esbuild.cli.config.mjs  esbuild.config.mjs  eslint.config.mjs  index.md  isolated-tests.json  oxfmtrc.json  oxlintrc.json  pkg.json  quick-reference.md  rolldown-validate.json  rollup-plugin-fix-debug.mjs  rollup-plugin-fix-ink.mjs  rollup-plugin-fix-strict-mode.mjs  rollup-plugin-fix-yoga.mjs  rollup-replace-patterns.mjs  rollup-shared-plugins.mjs  rollup.base.config.mjs  rollup.cli-js.config.mjs  rollup.cli-js.constants.mjs  rollup.cli-sea.config.mjs  rollup.dist.config.mjs  (+23 more)
test/fixtures/manifest-bazel/custom-name-bzlmod/: MODULE.bazel
test/fixtures/manifest-bazel/multi-repo-bzlmod/: MODULE.bazel
wasm-bundle/: Cargo.toml  README.md
wasm-bundle/src/: lib.rs
(+2361 files in other folders)
